# rules_openapi

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: ci.yml
aion/: BUILD.bazel  defs.bzl
docs/: BUILD.bazel  contract_test.md  defs.md  go_defs.md  providers.md  toolchains.md
examples/smoke_go/: BUILD.bazel  client_test.go
go/: BUILD.bazel  defs.bzl
openapi/: BUILD.bazel
rust/: BUILD.bazel  defs.bzl
tools/openapi_to_go_client/: BUILD.bazel  deps_keep.go  main.go
