load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

# OpenAPI → aion graph module-objects codegen rule. The plugin binary + the
# default toolchain ship from aion (see aion/defs.bzl docstring); fastverk
# provides only the rule + the toolchain type. No `default_aion_manifest_codegen`
# toolchain is registered here.
bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
)
