load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "providers.bzl",
    "toolchains.bzl",
    "contract_test.bzl",
])

# One toolchain type per (language, use_case) pair. Per-language
# rules resolve these; consumers register defaults (in MODULE.bazel)
# or their own implementations to override.
toolchain_type(name = "rust_client_codegen_toolchain_type")

toolchain_type(name = "go_client_codegen_toolchain_type")

# Reserved but not yet wired:
#   toolchain_type(name = "rust_server_codegen_toolchain_type")
#   toolchain_type(name = "go_server_codegen_toolchain_type")

bzl_library(
    name = "providers_bzl",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "toolchains_bzl",
    srcs = ["toolchains.bzl"],
    deps = [":providers_bzl"],
)

bzl_library(
    name = "contract_test_bzl",
    srcs = ["contract_test.bzl"],
)
