load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "providers.bzl",
    "toolchains.bzl",
    "contract_test.bzl",
])

# One toolchain type per (language, use_case) pair. Per-language
# rules resolve these; consumers register defaults (in MODULE.bazel)
# or their own implementations to override.
toolchain_type(name = "rust_client_codegen_toolchain_type")

# OpenAPI → aion graph module-objects (the api_manifest reify path). The plugin
# binary ships from aion (`@aion/artifact-ingestion-adapters:openapi_to_aion_manifest`);
# consumers register it as the default for this type (fastverk ships no default —
# the aion object model is not a fastverk concern).
toolchain_type(name = "aion_manifest_codegen_toolchain_type")

# Reserved but not yet wired:
#   toolchain_type(name = "go_client_codegen_toolchain_type")
#   toolchain_type(name = "rust_server_codegen_toolchain_type")
#   toolchain_type(name = "go_server_codegen_toolchain_type")

bzl_library(
    name = "providers_bzl",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "toolchains_bzl",
    srcs = ["toolchains.bzl"],
    deps = [":providers_bzl"],
)

bzl_library(
    name = "contract_test_bzl",
    srcs = ["contract_test.bzl"],
)
