load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_openapi//openapi:toolchains.bzl", "openapi_codegen_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    deps = [
        "//openapi:toolchains_bzl",
        "@rules_rust//rust:bzl_lib",
    ],
)

# Default Rust client codegen toolchain: progenitor-backed.
openapi_codegen_toolchain(
    name = "default_rust_client_codegen",
    binary = "//tools/openapi_to_rust_client:openapi_to_rust_client",
)

toolchain(
    name = "default_rust_client_codegen_toolchain",
    toolchain = ":default_rust_client_codegen",
    toolchain_type = "//openapi:rust_client_codegen_toolchain_type",
)
